# music_speed

./: .gitignore  Cargo.toml  README.md  package.json
src/: bin.rs  gui.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-wasm/: .gitignore  Cargo.toml
src-wasm/src/: lib.rs
src/gui/: .eslintrc.js  package.json  tsconfig.json  webpack.config.js
src/gui/src/: index.ts
