[package]
name = "speed-of-music"
version = "0.1.0"
authors = ["Filip Paulů <ing.fenix@seznam.cz>"]
edition = "2018"

[lib]
name = "speed_of_music"
path = "src/lib.rs"

[[bin]]
name = "speed-of-music"
path = "src/bin.rs"

[dependencies]
clap = "2.33.3"
minimp3 = "0.5.0"
pbr = "1.0.3"
rayon = "1.4.0"
