[package]
name = "music-speed"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "music-speed"
edition = "2018"
build = "src/build.rs"

[dependencies]
music_speed = { path = ".." }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "music-speed"
path = "src/main.rs"
