[package]
name = "music-speed-wasm"
version = "0.1.0"
authors = ["Filip Paulů <ing.fenix@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
music_speed = { path = ".." }
wasm-bindgen = "0.2.68"